--- a/app/src/main/res/layout/activity_create_contact_acitivity.xml
+++ b/app/src/main/res/layout/activity_create_contact_acitivity.xml
@@ -7,34 +7,35 @@
     tools:context="com.acme.a3csci3130.CreateContactAcitivity">
 
     <EditText
-        android:id="@+id/buisnessnumber"
+        android:id="@+id/buisnessname"
         android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:hint="Buisness Number"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="4dp"
+        android:hint="Buisness Name"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/buisnessname"
+
+        android:id="@+id/buisnessnumber"
         android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:hint="Name"
+        android:layout_marginLeft="16dp"
+        android:hint="Buisness Number"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buisnessnumber" />
+        app:layout_constraintTop_toBottomOf="@+id/buisnessname"
+        app:layout_constraintTop_toBottomOfOf="buisnessname" />
+
 
     <EditText
         android:id="@+id/buisnessaddress"
         android:layout_width="395dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="46dp"
+        android:layout_marginLeft="16dp"
         android:hint="Address"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buisnessname" />
+        app:layout_constraintTop_toBottomOf="@+id/buisnessnumber" />
 
     <Button
         android:id="@+id/submitButton"
